[package]
name = "bevy_northstar"
version = "0.6.2"
edition = "2024"
authors = ["John Mullins"]
description = "A Bevy plugin for Hierarchical Pathfinding"
homepage = "https://github.com/jtothethree/bevy_northstar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jtothethree/bevy_northstar"
categories = ["game-development"]
keywords = ["astar", "bevy", "game", "hpa", "pathfinding"]
exclude = ["assets/*", "res/*"]
autoexamples = false

# [[example]]
# name = "demo"
# required-features = ["stats"]

# [[example]]
# name = "isometric"

# [[example]]
# name = "collision_testing"
# required-features = ["stats"]

# [[example]]
# name = "basic"

# [[example]]
# name = "nav_mask"

# [[example]]
# name = "freeform_movement"

# [[example]]
# name = "reroute"

# [[example]]
# name = "3d_voxel_world"
# required-features = ["bevy_voxel_world", "bevy_panorbit_camera", "ndshape"]

[[bench]]
harness = false
name = "benches"

[dependencies]
indexmap = "2.14.0"
ndarray = { version = "0.17.2" }
rayon = { version = "1.12.0", optional = true }
rustc-hash = "2.1.2"
slab = "0.4.12"
smallvec = "1.15.2"

[dependencies.bevy]
version = "0.19"
default-features = false
features = ["bevy_gizmos", "bevy_log", "bevy_render"]

[dev-dependencies]
bevy = { version = "0.19", features = ["bevy_dev_tools"] }
bevy_ecs_tiled = { git = "https://github.com/taboky-dev/bevy_ecs_tiled.git", rev = "6b93c33", features = ["user_properties"] }
#bevy_panorbit_camera = { version = "0.34.0" }
#bevy_voxel_world = { git = "https://github.com/AndreRoelofs/bevy_voxel_world.git", branch = "bevy_18" }
ndshape = { version = "0.3.0" }

[target.'cfg(not(target_os = "windows"))']
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
criterion = { version = "0.5.0" }
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
rand = "0.10.1"
tiled = { version = "0.15.0" }

[features]
default = ["parallel"]
parallel = ["ndarray/rayon", "rayon"]
stats = []
